Fix 404 page styling

--- a/packages/core/template/default/404.md
+++ b/packages/core/template/default/404.md
@@ -3,12 +3,6 @@
     layout: 404.md
 </frontmatter>
 
-<body style="font-family: monospace; background-color: #f1f1f1;">
-    <div style="margin: 5rem;">
-        <h1 style="display: block; margin-bottom: 2rem; font-weight: 400; text-align: center; font-size: 10rem;">404</h1>
-        <p style="font-size: 1.5rem; text-align: center;">
-            File not found<br />
-            Click <a href="/">here</a> to go back to the home page.
-        </p>
-    </div>
-</body>
+
+-><p style="font-size: 10rem">404</p><-
+-><p style="font-size: 1.5rem">File not found<br>Click <a href="/">here</a> to go back to the home page.</p><-
