--- a/packages/core/template/default/404.md
+++ b/packages/core/template/default/404.md
@@ -4,4 +4,4 @@
 </frontmatter>
 
 -><p style="font-size: 10rem">404</p><-
--><p style="font-size: 1.5rem">Page not found<br>Click <a href="/">here</a> to go back to the home page.</p><-
+-><p style="font-size: 1.5rem">File not found<br>Click <a href="/">here</a> to go back to the home page.</p><-
